--- a/ref/rust/Cargo.toml
+++ b/ref/rust/Cargo.toml
@@ -2,5 +2,9 @@
 name = "bech32"
 version = "0.1.0"
 authors = ["Clark Moody"]
+description = "Encodes and decodes Bitcoin Segregated Witness addresses in Bech32"
+keywords = ["bitcoin", "base32", "encoding"]
+categories = ["encoding"]
+license = "MIT"
 
 [dependencies]
