--- a/ref/dart/pubspec.yaml
+++ b/ref/dart/pubspec.yaml
@@ -1,7 +1,10 @@
-name: segwit
-description: segwit address encoding
+name: bech32
+description: bech32 address encoding
 publish_to: 'none'
 
 dependencies:
   convert: ^2.1.1
   test: any
+
+environment:
+  sdk: ">=1.19.0 <3.0.0"
